# afb-app-manager

./: .gitignore  .gitreview  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  Makefile  Makefile.am  README  README.md  TODO  afm-main.pc.in  book.json  build-on-target  changelog  configure.ac  framework.md  gendocs.sh  mkbuild.sh  mkdocs.yml  wgt-config-xml.c  wgt-locales.c  wgt-rootdir.c  wgt-strings.c  wgt.h  wgtpkg-base64.c  wgtpkg-certs.c  wgtpkg-digsig.c  wgtpkg-files.c  wgtpkg-install.c  wgtpkg-pack.c  wgtpkg-sign.c  wgtpkg-workdir.c  wgtpkg-xmlsec.c  wgtpkg-zip.c  wgtpkg.h
certs/: CMakeLists.txt  developer.cert.pem  developer.key.pem  gen-certs.sh  partner.cert.pem  partner.key.pem  platform.cert.pem  platform.key.pem  public.cert.pem  public.key.pem  root.cert.pem  root.key.pem
certs/sample/: developer.cert.pem  developer.key.pem  gen-certs.sh  partner.cert.pem  partner.key.pem  platform.cert.pem  platform.key.pem  public.cert.pem  public.key.pem  root.cert.pem  root.key.pem
certs/sample2/: tool.sh
certs/sample2/templates/: mkend.cfg  mkroot.cfg  mksub.cfg
conf/: CMakeLists.txt  README.md  afm-launch.conf  afm-launch.conf.in  afm-system-daemon.conf  afm-system-daemon.service  afm-system-daemon.service.in  afm-system-daemon.socket.in  afm-unit-debug.conf.in  afm-unit.conf  afm-unit.conf.in  afm-user-daemon.service  afm-user-daemon.service.in
conf/dbus/: CMakeLists.txt  afm-permissions-session.conf  afm-permissions-system.conf
conf/generate-unit-conf/: afm-unit  binder.inc  provided.inc  service.inc
conf/system/: CMakeLists.txt  afm-api-afm-main@.service.in  afm-create-user.sh.in  afm-system-daemon.conf  afm-system-daemon.service.in  afm-system-daemon.socket.in  afm-system-setup.service  afm-system-setup.service.in  afm-system-setup.sh.in  afm-user-session.pamd  afm-user-session@.service  afm-user-session@.service.in  afm-user-session@.target  afm-user-setup.sh.in  afm-user-setup@.path  afm-user-setup@.service  afm-user-setup@.service.in  afmpkg-installer.service.in  afmpkg-installer.socket.in
conf/system/user-runtime-dir@.service.wants/: afm-user-setup@.service
conf/unit/: CMakeLists.txt  afm-unit  afm-unit-debug.conf.in  afm-unit.conf.in  binder.inc  macros.inc  provided-api-platform.inc  provided-api-user.inc  provided-binding-platform.inc  provided-binding-user.inc  service.inc
conf/unit/generate-unit-conf/: Makefile  afm-unit  binder.inc  provided-api.inc  provided-binding.inc  provided.inc  service.inc
conf/user/: CMakeLists.txt  afm-user-daemon.conf  afm-user-daemon.service.in  afm-user-session.service  afm-user-start.service
doc/: doc.css  (+18 more)
scripts/: CMakeLists.txt  afb-appmgr-migration-services.sh.in  afm-debug  afm-debug.in  afm-install  afm-util  afm-util-legacy.in  afm-util.in
src/: CMakeLists.txt  Makefile.am  README.md  TODO  af-db.c  af-db.h  af-launch.c  af-launch.h  af-run.c  af-run.h  af-usrd.c  afm-binding.c  afm-db.c  afm-db.h  afm-launch-mode.c  afm-launch-mode.h  afm-launch.c  afm-launch.h  afm-main-binding.c  afm-main-plugin.c  afm-run.c  afm-run.h  afm-system-daemon.c  afm-system-daemon.xml  afm-udb.c  afm-udb.h  afm-urun.c  afm-urun.h  afm-user-daemon.c  afm-user-daemon.xml  afm-user-session.c  afm.h  afmpkg-common.h  afmpkg.c  afmpkg.h  appfwk-run.c  appfwk-run.h  appfwk.c  appfwk.h  detect-packtype.c  (+75 more)
src/afmpkg/: CMakeLists.txt  afmpkg-client.c  afmpkg-client.h  afmpkg-common.h  afmpkg-legacy.c  afmpkg-legacy.h  afmpkg-proto.h  afmpkg-request.c  afmpkg-request.h  afmpkg-server.c  afmpkg-server.h  afmpkg-std.c  afmpkg-std.h  afmpkg.c  afmpkg.h
src/binding/: CMakeLists.txt  afm-binding.c  afm-udb.c  afm-udb.h  afm-urun.c  afm-urun.h  auth.c  auth.h
src/cert/: .gitignore  CMakeLists.txt  check-signature-tool.c  check-signature.c  check-signature.h  common-cert.c  common-cert.h  digest-tool.c  digest.c  digest.h  domain-spec-tool.c  domain-spec.c  domain-spec.h  draft-signature.c  file-hash-list.c  file-hash-list.h  make-signature.c  make-signature.h  signature-name.c  signature-name.h  signed-digest-tool.c  signed-digest.c  signed-digest.h  tool.sh
src/cert/templates/: mkend.cfg  mksub.cfg
src/main/: CMakeLists.txt  main-afm-user-session.c  main-afmpkg-check.c  main-afmpkg-daemon.c  main-afmpkg-installer.c  main-afmpkg-installerd.c  main-afmpkg-offline.c  main-afmpkg-status.c  main-check-signature.c  main-digest.c  main-domain-spec.c  main-migrate-config.c  main-signed-digest.c  main-translate.c  main-wgtpkg-info.c  main-wgtpkg-install.c  main-wgtpkg-pack.c
src/mustach/: CMakeLists.txt
src/rpm-plugin/: CMakeLists.txt  legacy-rpm-redpesk.c  macros.afm-main  redpesk.c
src/secmgr/: CMakeLists.txt  secmgr-wrap.c  secmgr-wrap.h  simulate-sec-lsm-manager.h
src/setup/: CMakeLists.txt  main-afm-system-setup.c  main-afm-user-setup.c  setup-utils.c  setup-utils.h
src/simulation/: sec-lsm-manager.h  security-manager.h  smack.h
src/tests/: CMakeLists.txt
src/units/: CMakeLists.txt  apply-mustach.c  normalize-unit-file.c  normalize-unit-file.h  unit-desc.c  unit-desc.h  unit-fs.c  unit-fs.h  unit-process.c  unit-process.h  unit-utils.c  unit-utils.h
src/utils/: CMakeLists.txt  apply-mustach.c  apply-mustach.h  detect-packtype.c  detect-packtype.h  domain-spec.c  domain-spec.h  manage-afid.c  manage-afid.h  manifest.c  manifest.h  mime-type.c  mime-type.h  mustach.c  normalize-unit-file.c  normalize-unit-file.h  path-entry.c  path-entry.h  path-type.c  path-type.h  permset.c  permset.h  sighup-framework.c  sighup-framework.h  unit-generator.c  unit-generator.h  unit-generator.readme  unit-oper.c  unit-oper.h  utils-dir.c  utils-dir.h  utils-json.c  utils-json.h  utils-systemd.c  utils-systemd.h
src/wgtpkg/: CMakeLists.txt  wgt-config.c  wgt-config.h  wgt-info.c  wgt-info.h  wgt-json.c  wgt-json.h  wgt-strings.c  wgt-strings.h  wgt.c  wgt.h  wgtpkg-digsig.c  wgtpkg-files.c  wgtpkg-files.h  wgtpkg-install.c  wgtpkg-install.h  wgtpkg-mustach.c  wgtpkg-permissions.h  wgtpkg-uninstall.c  wgtpkg-unit.c  wgtpkg-unit.h  wgtpkg-workdir.c  wgtpkg-workdir.h  wgtpkg-xmlsec.c  wgtpkg-xmlsec.h  wgtpkg-zip.c  wgtpkg-zip.h
(+140 files in other folders)
